--- a/index.html
+++ b/index.html
@@ -17,10 +17,49 @@
         }
         .container {
             text-align: center;
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            margin-bottom: 20px;
+            color: #333;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        textarea, input[type="file"], button {
+            margin-bottom: 20px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            width: 100%;
+            max-width: 400px;
+            box-sizing: border-box;
+            font-size: 16px;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+        #imagePreview {
+            max-width: 100%;
+            max-height: 300px;
+            display: none;
+            margin-bottom: 20px;
         }
         #result {
-            margin-top: 20px;
             font-weight: bold;
+            color: #333;
         }
     </style>
 </head>
@@ -28,9 +67,9 @@
     <div class="container">
         <h1>AI Math Solver</h1>
         <form id="mathForm">
-            <textarea id="mathInput" name="mathInput" rows="4" cols="50" placeholder="Enter your math problem here"></textarea><br>
-            <input type="file" id="imageInput" name="imageInput" accept="image/*" onchange="previewImage(event)"><br>
-            <img id="imagePreview" src="#" alt="Preview" style="max-width: 300px; max-height: 300px; display: none;"><br>
+            <textarea id="mathInput" name="mathInput" rows="4" cols="50" placeholder="Enter your math problem here"></textarea>
+            <input type="file" id="imageInput" name="imageInput" accept="image/*" onchange="previewImage(event)">
+            <img id="imagePreview" src="#" alt="Preview">
             <button type="submit">Solve</button>
         </form>
         <div id="result"></div>
